# DrinksDB

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: data_handler.py  database.py  main.py  migrate_json_to_db.py  models.py
backend/routers/: drinks.py  ingredients.py
data/: drinks.db  drinks.json
frontend/: app.js  i18n.js  index.html  style.css
images/: README.md
