[project]
name = "drinksdb"
version = "0.1.0"
description = "Home bar application for managing and discovering cocktail recipes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.32.0",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py311"]
